# linkedin-ai-sync

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DUPLICATE_DETECTION_README.md  Dockerfile  Makefile  README.Docker.md  README.md  README_WEB_INTERFACE.md  count_connections.py  crm_contact_downloader.py  debug_ai.py  debug_ai_response.py  demo_scraper_workflow.py  docker-compose.yml  docker-entrypoint.sh  duplicate_detection_pipeline.py  duplicate_finder.py  duplicate_finder_simple.py  duplicate_matcher_demo.py  extract_urls.py  fast_duplicate_pipeline.py  hello.py  linkedin_profile_scraper.py  list_crm_contacts.py  list_crm_contacts_simple.py  pyproject.toml  show_duplicate_details.py  test_ai_duplicate_detection.py  test_ai_simple.py  test_ai_sync.py  test_linkedin_data.py  test_playwright_official.py  test_runner.py  test_scraper_basic.py  test_scraper_simple.py  validate-docker.sh  view_scraped_profiles.py
docs/: linkedin_cookies_setup.md
mcp_servers/dynamics_crm/: __init__.py  __main__.py  server.py
mcp_servers/linkedin/: __init__.py  __main__.py  server.py
mcp_servers/playwright/: __init__.py  __main__.py  server.py
scripts/: build_frontend.sh  start_web_interface.sh
services/: __init__.py  mcp_manager.py
sync/: __init__.py  ai_duplicate_detection.py  cli.py  synchronizer.py  web_integration.py
tests/: conftest.py  test_connectivity.py
web/: api.py  models.py  services.py  start_server.py
web/frontend/: package-lock.json  package.json  tailwind.config.js
web/frontend/public/: index.html
web/frontend/src/: App.js  index.css
web/frontend/src/components/: ContactDisplay.jsx  Dashboard.jsx  DuplicateCard.jsx  DuplicatesList.jsx
web/frontend/src/services/: api.js
